--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^17.0.11",
     "antd": "^4.18.7",
     "compose-function": "^3.0.3",
+    "effector": "^22.2.0",
+    "effector-react": "^22.0.6",
     "node-sass": "6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -52,6 +54,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
+    "effector-logger": "^0.13.4",
     "eslint": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
