--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "effector-logger": "^0.13.4",
     "eslint": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
