--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "plugins": [
-    "effector-logger/babel-plugin"
+    "effector-logger/babel-plugin",
+    "@babel/plugin-proposal-export-namespace-from"
   ]
 }
