--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_BASE_URL=https://freecurrencyapi.net/api/v2/
+REACT_APP_API_BASE_URL=https://api.currencyapi.com/v3/
 REACT_APP_API_INDIVIDUAL_KEY=4a163970-914f-11ec-a4a0-a137198aceef
